# src/routes/v1.dashboard.routes.ts
@@ -2,8 +2,9 @@ import { Router } from "express"
 
 import { authMiddleware } from "@/middlewares/authMiddleware"
 import { expressRouteAdapter } from "@/presentations/adapters/expressRouterAdapter"
-import { financialExtractController } from "@/presentations/controllers/financial/extract.controller"
 import { dashboardBinaryResumeController } from "@/presentations/controllers/dashboard/binary-resume.controller"
+import { dashboardUserStatsListController } from "@/presentations/controllers/dashboard/user-stats-list.controller"
+import { dashboardUserStatsController } from "@/presentations/controllers/dashboard/user-stats.controller"
 
 const router = Router()
 
@@ -11,6 +12,16 @@ router.get("/binary/resume",
   // #swagger.tags = ['Webhook']
   authMiddleware,
   expressRouteAdapter(dashboardBinaryResumeController)
+)
+router.get("/users/stats",
+  // #swagger.tags = ['Webhook']
+  authMiddleware,
+  expressRouteAdapter(dashboardUserStatsController)
+)
+router.get("/users/stats/list",
+  // #swagger.tags = ['Webhook']
+  authMiddleware,
+  expressRouteAdapter(dashboardUserStatsListController)
 )
 
 
